--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@apihero/github": "^1.1.4-beta.5",
+    "@tanstack/react-query": "^4.2.3",
+    "@tanstack/react-query-devtools": "^4.2.3",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
