--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "dependencies": {
     "@apihero/core": "^1.0.0",
-    "@apihero/github": "^1.1.4-beta.7",
-    "@apihero/react": "^1.0.0",
+    "@apihero/github": "^1.1.4",
+    "@apihero/react": "^1.1.0",
     "@tanstack/react-query": "^4.2.3",
     "@tanstack/react-query-devtools": "^4.2.3",
     "next": "latest",
