--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@apihero/core": "^1.0.0",
     "@apihero/github": "^1.1.5",
     "@apihero/react": "^1.1.0",
+    "apihero-js": "^1.3.10",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -21,5 +22,8 @@
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
+  },
+  "apihero": {
+    "workerDirectory": "public"
   }
 }
