--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@apihero/core": "^1.0.0",
     "@apihero/github": "^1.1.5",
     "@apihero/react": "^1.1.0",
+    "@tanstack/react-query": "^4.16.1",
     "apihero-js": "^1.3.10",
     "next": "latest",
     "react": "18.1.0",
